[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrobloxbot"
version = "1.0.7"
authors = [
  { name="Mews", email="tiraraspas@gmail.com" },
]
description = "A python library to control the roblox character and interact with game ui through keyboard inputs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
  "pydirectinput",
  "pygetwindow",
  "pyperclip",
  "pywin32",
  "keyboard",
]
keywords = ["roblox", "bot", "keyboard"]

[project.urls]
Homepage = "https://github.com/Mews/py-roblox-bot"
Issues = "https://github.com/Mews/py-roblox-bot/issues"